prevent line break in user_menu

--- a/static/less/sitewide.less
+++ b/static/less/sitewide.less
@@ -288,6 +288,7 @@ ul.menu{
     
     ul {
         &#user_menu {
+            white-space:nowrap;
             display: none;
             z-index: 100;
             position: absolute;
